internal/POCs/demo/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
spec:
  serviceName: "nginx"
  replicas: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: openresty/openresty:alpine
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/local/openresty/nginx/conf/nginx.conf
          subPath: nginx.conf
        - name: www
          mountPath: /usr/local/openresty/nginx/html
        - name: nginx-logs
          mountPath: /var/log/nginx
        readinessProbe:
          httpGet:
            path: /status
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /status
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: www
        emptyDir: {}
      - name: nginx-logs
        emptyDir: {}
